--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D45C76EB4AF61C987A421CA4247A509B
+CompanyName=SebLab
+ProjectName=SebTest
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "2FA1BCA34A0FD45FC2B42DA5E025762D", "Sebastian")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
